// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when is current page 1`] = `
<div
  className="src-shared-components-pagination-link__current-page src-shared-components-pagination-link__base-page"
>
  2
</div>
`;

exports[`should render correctly when is not current page 1`] = `
<button
  className="src-shared-components-pagination-link__link-page src-shared-components-pagination-link__base-page"
  onClick={[Function]}
  type="button"
>
  2
</button>
`;

exports[`should render correctly when should be a go to first page link 1`] = `
<button
  className="src-shared-components-pagination-link__link-page src-shared-components-pagination-link__base-page"
  onClick={[Function]}
  type="button"
>
  <FaAngleDoubleLeft
    styleName="icon"
  />
</button>
`;

exports[`should render correctly when should be a go to last page link 1`] = `
<button
  className="src-shared-components-pagination-link__link-page src-shared-components-pagination-link__base-page"
  onClick={[Function]}
  type="button"
>
  <FaAngleDoubleRight
    styleName="icon"
  />
</button>
`;
